Upgrade to 1.20.6 without ItemSubPredicates and EntitySubPredicates